# curso-fastapi

./: .env  README.md  exemplos.json  pyproject.toml
mulheres_cientistas_api/: config.py  crud.py  database.py  main.py  models.py
mulheres_cientistas_api/routers/: cientista.py  frase.py
